--- a/PassphraseGen/PassphraseGen.csproj
+++ b/PassphraseGen/PassphraseGen.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builder.cs" />
+    <Compile Include="WordsController.cs" />
     <Compile Include="Classes\Adjective.cs" />
     <Compile Include="Classes\Adverb.cs" />
     <Compile Include="Classes\BuildObj.cs" />
@@ -50,10 +50,10 @@
     <Compile Include="Classes\PseudoSentenceElement.cs" />
     <Compile Include="Classes\SentenceMember.cs" />
     <Compile Include="Classes\Verb.cs" />
-    <Compile Include="Generator.cs" />
-    <Compile Include="Dictionary.cs" />
+    <Compile Include="PseudoSentenceController.cs" />
+    <Compile Include="DictionaryController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Worker.cs" />
+    <Compile Include="PassphraseController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
