--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@ DesignTimeResolveAssemblyReferencesInput.cache
 Test.csproj.FileListAbsolute.txt
 .vs/*
 .suo
-PassphraseGen/bin/*
-PassphraseGen/obj/*
-Test/bin/*
-Test/obj/*
-passphrase/bin/*
-passphrase/obj/*
+PassphraseGen/bin
+PassphraseGen/obj
+Test/bin
+Test/obj
+passphrase/bin
+passphrase/obj
 packages/*
+/Web/bin
+/Web/obj
