--- a/App27/PassphraseWinPhone.csproj
+++ b/App27/PassphraseWinPhone.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{3F4D00F7-A23C-4EC3-AAAB-C6F4C82B1869}</ProjectGuid>
+    <ProjectGuid>{AF74F030-E851-4013-9398-390F6FAD21AE}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SplitViewMenu</RootNamespace>
-    <AssemblyName>SplitViewMenu</AssemblyName>
+    <RootNamespace>App27</RootNamespace>
+    <AssemblyName>App27</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
@@ -16,7 +16,7 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>SplitViewMenu_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>App27_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -89,16 +89,56 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Content Include="ApplicationInsights.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\dictionaries\Adjectives.xml" />
+    <Content Include="Resources\dictionaries\Adverbs.xml" />
+    <Content Include="Resources\dictionaries\Conjunctions.xml" />
+    <Content Include="Resources\dictionaries\Nouns.xml" />
+    <Content Include="Resources\dictionaries\Verbs.xml" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="INavigationMenuItem.cs" />
-    <Compile Include="NavMenuListView.cs" />
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DictionaryController.cs" />
+    <Compile Include="MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="EntropyGenerate.xaml.cs">
+      <DependentUpon>EntropyGenerate.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PassphraseController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleNavMenuItem.cs" />
-    <Compile Include="SplitviewMenu.cs" />
+    <Compile Include="PseudoSentenceController.cs" />
+    <Compile Include="Classes\Adjective.cs" />
+    <Compile Include="Classes\Adverb.cs" />
+    <Compile Include="Classes\BuildObj.cs" />
+    <Compile Include="Classes\Conjunction.cs" />
+    <Compile Include="Classes\Noun.cs" />
+    <Compile Include="Classes\PseudoSentence.cs" />
+    <Compile Include="Classes\PseudoSentenceElement.cs" />
+    <Compile Include="Classes\SentenceMember.cs" />
+    <Compile Include="Classes\Verb.cs" />
+    <Compile Include="Translate.xaml.cs">
+      <DependentUpon>Translate.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel.cs" />
+    <Compile Include="Welcomme.xaml.cs">
+      <DependentUpon>Welcomme.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WordsController.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AppxManifest Include="Package.appxmanifest">
+      <SubType>Designer</SubType>
+    </AppxManifest>
+    <None Include="App27_TemporaryKey.pfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="PassphraseGen.csproj" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -107,6 +147,28 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ApplicationDefinition Include="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </ApplicationDefinition>
+    <Page Include="MainPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="EntropyGenerate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Translate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Welcomme.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
