--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -213,6 +213,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\PassphraseGenBitsController.cs" />
+    <Compile Include="Controllers\PassphraseGenBinaryController.cs" />
+    <Compile Include="Controllers\PassphraseGenSentenceController.cs" />
     <Compile Include="Controllers\PassphraseGenController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
